--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -28,7 +28,13 @@ RUN apt-get update && apt-get install -y \
 # 2. Install Python packages
 RUN pip3 install pyserial
 
-# 3. Create a non-root user and add to dialout (CRITICAL for Arduino)
+# 3. Install I2C tools and Python SMBus for MPU6050
+RUN apt-get update && apt-get install -y \
+    python3-smbus \
+    i2c-tools \
+    && rm -rf /var/lib/apt/lists/*
+
+# 4. Create a non-root user and add to dialout (CRITICAL for Arduino)
 ARG USERNAME=ros
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
@@ -38,27 +44,27 @@ RUN groupadd --gid $USER_GID $USERNAME \
   && usermod -aG dialout $USERNAME \
   && mkdir /home/$USERNAME/.config && chown $USER_UID:$USER_GID /home/$USERNAME/.config
 
-# 4. Set up sudo
+# 5. Set up sudo
 RUN apt-get update \
   && apt-get install -y sudo \
   && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
   && chmod 0440 /etc/sudoers.d/$USERNAME \
   && rm -rf /var/lib/apt/lists/*
 
-# 5. Copy scripts
+# 6. Copy scripts
 COPY entrypoint.sh /entrypoint.sh
 COPY bashrc /tmp/bashrc_append
 RUN chmod +x /entrypoint.sh
 
-# 6. Configure User Environment
+# 7. Configure User Environment
 # Append custom bashrc to the real .bashrc
 RUN cat /tmp/bashrc_append >> /home/$USERNAME/.bashrc && rm /tmp/bashrc_append
 
-# 7. Create Workspace folder with correct permissions
+# 8. Create Workspace folder with correct permissions
 RUN mkdir -p /home/$USERNAME/ros2_ws/src \
     && chown -R $USER_UID:$USER_GID /home/$USERNAME/ros2_ws
 
-# 8. Switch User
+# 9. Switch User
 USER $USERNAME
 WORKDIR /home/$USERNAME/ros2_ws
 
