--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -1,4 +1,4 @@
-FROM osrf/ros:humble-ros-base
+FROM ros:humble-ros-base
 
 # 1. Install Basic Tools AND Robot Dependencies
 RUN apt-get update && apt-get install -y \
