--- a/src/warehouse_real_description/config/my_controllers.yaml
+++ b/src/warehouse_real_description/config/my_controllers.yaml
@@ -9,6 +9,12 @@ controller_manager:
     joint_broad:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+    # ---------------------------------------------------------------
+    # Added lifter_controller configuration
+    # ---------------------------------------------------------------
+    lifter_controller:
+      type: position_controllers/JointGroupPositionController
+
 diff_cont:
   ros__parameters:
 
@@ -66,3 +72,14 @@ diff_cont:
 
 # joint_broad:
 #   ros__parameters:
+
+# ---------------------------------------------------------------
+# Lifter Controller Parameters
+# ---------------------------------------------------------------
+lifter_controller:
+  ros__parameters:
+    joints:
+      - lifter_joint
+    
+    # Optional: Interface name (defaults to position, but good to be explicit)
+    interface_name: position
