Editing urdf files to match real dimentions

--- a/src/warehouse_real_description/CMakeLists.txt
+++ b/src/warehouse_real_description/CMakeLists.txt
@@ -24,7 +24,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY config description worlds rviz
+  DIRECTORY config description worlds rviz launch
   DESTINATION share/${PROJECT_NAME}
 )
 
