feat: Major update - URDF Refactor, Nav2 Reverse, Map & Control Fixes
This commit introduces significant improvements to the robot description and navigation stack:

- **URDF & Description:**
  - Manually refactored URDF links and joints for correct kinematics.
  - Added and configured robot meshes.
  - Tuned physical dimensions and collision boxes.

- **Sensors:**
  - Updated Lidar Field of View (FOV) settings for both Simulation and Real robot configurations.

- **Navigation (Nav2):**
  - Optimized parameters to enable reverse motion (negative min_vel_x), preventing unnecessary rotations.
  - Configured behavior trees for smoother path planning.

- **Mapping & Localization:**
  - Added the generated warehouse map (YAML/PGM).
  - Fixed map server paths in launch files (using find-pkg-share).
  - Resolved QoS settings for correct map visualization in RViz.

- **Control:**
  - Fixed Lifter Controller by adding the missing spawner node to the launch file.
  - Separated Simulation and Real Robot launch logic.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       - TERM=xterm-256color
       # Force software rendering if hardware acceleration fails (Fixes the crash)
       - LIBGL_ALWAYS_SOFTWARE=1 
+      - MESA_GL_VERSION_OVERRIDE=3.3
     
     # Volumes: Map X11 for GUI and your src folder for code
     volumes:
@@ -34,7 +35,7 @@ services:
       # Access to graphics card for rendering
       - /dev/dri:/dev/dri
       # - /dev/ttyUSB0:/dev/ttyUSB0
-      - /dev/ttyACM0:/dev/ttyACM0
+      # - /dev/ttyACM0:/dev/ttyACM0
 
     # Keep the container running so you can attach to it
     command: sleep infinity
