--- a/src/warehouse_real_nav/config/nav2_params.yaml
+++ b/src/warehouse_real_nav/config/nav2_params.yaml
@@ -41,12 +41,12 @@ amcl:
 
 
     # Set your robot's initial pose (used on startup)
-    # set_initial_pose: true
-    # initial_pose:
-    #   x: 0.0
-    #   y: 0.0
-    #   z: 0.0
-    #   yaw: 0.0
+    set_initial_pose: true
+    initial_pose:
+      x: 0.0
+      y: 0.0
+      z: 0.0
+      yaw: 0.0
 
 
 bt_navigator:
@@ -147,7 +147,7 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
+      min_vel_x: -0.26
       min_vel_y: 0.0
       max_vel_x: 0.26
       max_vel_y: 0.0
